<resources>
	<string name="app_name">Faithbuilders</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_settings">Settings</string>
	<string name="label_home">Home</string>
	<string name="label_speakers">Speakers</string>
	<string name="label_schedule">Schedule</string>
	<string name="label_maps">Campus Map</string>
	<string name="label_donate">Donate</string>
	<string name="label_about">About</string>
	<string name="label_biography">Biography</string>
	<string name="label_web">Visit our website!</string>
	<string name="label_facebook">Visit us on Facebook!</string>
	<string name="label_day1">Thu. July 12</string>
	<string name="label_day2">Fri. July 13</string>
	<string name="label_day3">Sat. July 14</string>
	<string name="label_day1_full">Thursday, July 12</string>
	<string name="label_day2_full">Friday, July 13</string>
	<string name="label_day3_full">Saturday, July 14</string>
	<string name="title">Faithbuilders 2018</string>
	<string name="theme">Uncomfortable Christianity</string>
	<string name="location">Pacific Lutheran University\n12180 Park Avenue S.\nTacoma, WA 98447</string>
	<string name="about">FaithBuilders™ is a Northwest spiritual growth workshop for the purpose of building up the Body of Christ to be full grown in service to Christ. Our goal is to reach, not only the Northwest Churches of Christ, but all corners of the brotherhood.\n\nOur theme is found in Ephesians 4:14&#8211;16 &#8211; “Then we will no longer be infants, tossed back and forth by the waves, and blown here and there by every wind of teaching and by the cunning and craftiness of men in their deceitful scheming. Instead, speaking the truth in love, we will in all things grow up into him who is the Head that is Christ. From him the whole body, joined and held together by every supporting ligament, grows and builds itself up in love, as each part does its work.”\n\nWe seek to help churches and individual members to seek to return back to the Scriptures and align ourselves with the divine pattern of New Testament Christianity.\n\nThe next FaithBuilders™ workshop is scheduled for July 12&#8211;14, 2018 and is held at the Pacific Lutheran University. It will take place in the beautiful Lagerquist Hall, located in the Mary Baker Russell Music Center.\n\nThis university has gracefully and enthusiastically allowed us to use their facilities understanding that we have different doctrinal positions from the Lutherans, but have accepted us as paying customers of their facilities.\n\nThis workshop is being overseen by 3 elderships and their congregations: The Olympia church of Christ in Olympia, Washington, Springbrook church of Christ in Renton, Washington and the Puyallup church of Christ in Puyallup, Washington. Ken Wilson is the director. Our purpose is to make this workshop a yearly event for as long as the Lord allows.\n\nWe are expecting an attendance of at least 500 or more and hope to build on that for the next few years.</string>
	<string name="description_behailuendeshaw">I have served as a full–time minister with the Churches of Christ for over 55 years in Ethiopia, Nairobi, Kenya and currently in USA.\n\nServed as the Church of Christ Mission Director, Addis Ababa, Ethiopia. (1974 to 2016).\n\nServed as the Dean of Five Preacher Training Schools (SIBI Branch Schools) in Ethiopia. (1974–2016), Helped train more than 2,000 preachers.\n\nLed a campaign to establish up to 1200 congregations.\n\nAdministrated 5 Schools for the Deaf, 3 Kindergartens for destitute children.\n\nLed and Organized the largest Church of Christ Emergency Famine Project and Distributed Lifesaving Food to over 128,000 starving people.\n\nConsolidated Water Well Development Project in Ethiopia. Drilled over 650 boreholes that provide clean water to 2.5 million people.\n\nTranslated (print and audio form) the 40 Biblical Courses of SIBI into Amharic, the national language of Ethiopia. This may well be the greatest single need for the development of the rapidly growing churches of Christ in Ethiopia.\n\nMINISTRY ACCOLADES:\n\nHonorary Doctorate recipient (Harding University 1996)\n\nHonorary Doctorate recipient (Abilene Christian University 1996)\n\nHonorary Doctorate recipient (American Christian Bible College 1996)\n\nChristian Service Award (Pepperdine University 2001)\n\nWorld Changer Award (Sunset International Bible Institute 2015)\n\nTo His Glory\n\nBehailu A. Endeshaw</string>
	<string name="description_carrelldennis">Carrell Dennis earned a Bachelor of Science Degree from Eastern New Mexico University before attending the Sunset School of Preaching, where he earned a diploma in Bible and Missions. In 1982, he planted the Covington Sawyer church of Christ, Covington Washington and helped establish the Lord\'s church in Bratislava, Slovakia. He is currently one of the Elders at the Springbrook church of Christ in Renton, Washington.</string>
	<string name="description_jackkeller">Jack Keller has been a minister and family counselor for almost 45 years. He earned a Ph.D. degree from Cornerstone University in Clinical Christian Counseling. He is a Licensed Clinical Pastoral Counselor with the National Christian Counselors Association. Jack is a graduate of Sunset International Bible Institute in Lubbock, Texas, (formerly SSOP.) He and his wife, Linda, along with two other families helped establish the congregation of the Lord\'s church in Ferndale, Washington in 1967. He has served congregations in Washington and California. He has spoken on workshops, seminars, and held meetings in Canada, Washington, Oregon and California. He has written a commentary on the Corinthian letters and many study guides on a number of Bible topics and books of the New Testament. He is back at the church in Ferndale serving for the second time as its pulpit minister. He is in his thirty fourth consecutive year as a minister for the congregation. Jack also directs the Portal Way Bible Institute. He teaches counseling and Bible courses at the institute. He and his wife Linda have been married for over fifty one years and have two daughters and four grandchildren.</string>
	<string name="description_jodyapple">Jody L Apple is in his 30th year of preaching &amp; teaching for the Lord\'s church. He completed 23 years with the church in Media, PA (suburban Philadelphia) in December 2006 and now works full-time with TheBible.net and its online schools: Internet School of Biblical Studies, Video Bible Institute and SchoolOfBiblicalStudies.org.\n\nHe is a graduate of Freed-Hardeman University and the Graduate School of Tennessee Bible College. He has pursued additional graduate work in philosophy and religious studies at Harding Graduate School of Religion, Southern Christian University, Westminster Theological Seminary and West Chester University.\n\nJody is the author of Hermeneutical Agnosticism: A Critique of Subjectivism in Biblical Interpretation, as well as numerous articles in brotherhood journals and lectureship books.\n\nHe is the originator and administrator of TheBible.net, an online site devoted to evangelism and edification - TheBible.net hosts ISBS &amp; VBI. He also serves as an instructor and assists in directing the school.\n\nJody and his wife, Evelyn, have three children - Jonathan, Benjamin and Julia. He is a persistent jogger, loves Macs (the computers not the hamburgers), and is an avid reader.</string>
	<string name="description_kevinbethea">Brother Kevin Bethea is the Senior Minister of the East Baltimore church of Christ in Baltimore, Maryland. He also currently serves as president of the Northeast Baltimore Bible Institute &amp; College. Brother Bethea was born in Baltimore, Maryland. He is a former second generation Pentecostal preacher, as he was converted into the Lord\'s church in the late 1980s. Brother Bethea was retrained by the school of external studies, SIBI, and holds an M.A. degree in Clinical Counseling from the Cornerstone University. Brother Bethea also received an honorary Masters degree in Biblical Studies from the University of Bible in Baltimore. He became the assistant minister at the Metropolitan church of Christ in 1992. During this time, he was regarded for his strong Biblical teachings and evangelistic abilities. With a vision to plant a new work in Baltimore, he has served at the East Baltimore church of Christ since December 1995, and helped to form a healthy and happy congregation of more than 375 members. Brother Bethea also serves as a Certified Sunset International Bible Institute Satellite School Administrator.\n\nBrother Bethea has preached Gospel Meetings and held workshops in Georgia, New York, Pennsylvania, Texas, North Carolina, Virginia and the DC areas. He was a speaker in the Mid-Atlantic, Southeast &amp; Nations Capital Lectureships and Mid-Atlantic marriage retreat and seminar hosted by the Prince Georges church of Christ.  For a total of 9 years, Kevin hosted a live, call-in radio program entitled \"Search the Scriptures\", which was instrumental in increasing the kingdom of God in the Baltimore metropolitan area.  This live, call-in radio program paved the way for others to begin to challenge the charismatic movement and return back to the Lord\'s church.</string>
	<string name="description_loriboyd">Lori Boyd is from Murfreesboro, Tennessee and attends the East Main Church of Christ. She and her husband, Sam, have been married for seventeen years and have three children, Evie (14), Kate (12), and Briggs (9). Lori is a Registered Nurse and works as a Nursing Supervisor at St. Thomas Rutherford Hospital in Murfreesboro. She is also currently enrolled in classes at the Nashville School of Preaching and Biblical Studies.\n\nLori has written for Think magazine and has developed several Bible studies for women. Her first published book, Trailblazers, was released at the end of last year and she is currently working on the completion of her second book, entitled Walking to the Promised Land. She has a passion for public speaking and enjoys presenting regularly at ladies’ events and retreats.\n\nLori was born in Germany and had the wonderful opportunity to live all across the United States while growing up in the Air Force. She attended Abilene Christian University in Texas and graduated from the Abilene Intercollegiate School of Nursing in 1996. She moved to Nashville in June of 1997 and has called Middle Tennessee “home” ever since. Some of her favorite things include spending time with her family, writing, reading, speaking, teaching, and traveling. Above everything else, she loves the Lord, His church, and the incredible joy that comes with being a Christian.</string>
</resources>