<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context=".BiographyFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/bio_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/label_biography" />
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/bio_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/profile"
                    app:civ_border_width="0dp"
                    app:civ_border_color="#FF000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_biography"
                    android:textColor="@android:color/primary_text_light"
                    android:paddingTop="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="0dp"
                    android:id="@+id/bio_name"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/bio_photo"
                    android:layout_toEndOf="@+id/bio_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_maps"
                    android:textColor="@android:color/secondary_text_light"
                    android:id="@+id/bio_location"
                    android:layout_below="@+id/bio_name"
                    android:layout_alignLeft="@+id/bio_name"
                    android:layout_alignStart="@+id/bio_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:id="@+id/bio_description"
                    android:layout_below="@+id/bio_location"
                    android:layout_alignLeft="@+id/bio_photo"
                    android:layout_alignStart="@+id/bio_photo"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"/>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
